# libqalculate-emscripten

./: .gitignore  Makefile.am  README  autogen.sh  configure.in  emconfigure  interface.cc  interface.js  libqalculate.pc.in
libqalculate/: BuiltinFunctions.cc  BuiltinFunctions.h  Calculator.cc  Calculator.h  Makefile.am  support.h  util.cc
