## Process this file with automake to produce Makefile.in

SUBDIRS = libqalculate data po po-defs

EXTRA_DIST = \
	autogen.sh \
	TODO \
	README.translate \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in \
	omf.make \
	xmldocs.make \
	libqalculate.pc.in

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libqalculate.pc
